/*
 * $Id: ChangeLog,v 1.2139 2004/01/26 00:30:46 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-01-26 04:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  + contrib/libct/numlohi.c
    + Implemented NumLow() and NumHigh().
  * contrib/libct/Makefile
    + Added numlohi.c.

2004-01-26 03:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/files.c
    + Implemented SetFDaTi() for Win32 and Unix.

2004-01-26 05:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/lang/msgeo.c
  * source/lang/msgfr.c
  * source/lang/msgko.c
  * source/lang/msgsrwin.c
    ! added missing commas on array members.

2004-01-25 15:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.bc
   * makefile.vc
   * makefile.nt
     * synchronise, slight re-ording
   * source\rtl\gtwvt\gtwvt.c
     * casts

2004-01-25 20:07 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtapi.c
    ! hb_gtGobjectInside() must return true if the area INTERSECTS with the given
      object, and not just if the object is partially or completely inside the area
      as it was before.
      
  * source/rtl/gtxvt/gtxvt.c
    + Added X Clipping while drawing graphical objects to allow correctly
      layering of graphical objects.

2004-01-25 16:05 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * Makefile.bc
    + Added gtgraph support

  * source/rtl/gtwvt/gtwvt.c
    + Added support for gtgraph

2004-01-25 19:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbfcdx/dbfcdx1.c
    * corrections on recently commited changes on casts.

  * source/rtl/gtgraph.c
    ! add type castings

2004-01-25 13:56 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * source/rtl/gtapi.c
    + Objects are now drawn last-to-first, and the internal objects are